# mrxs-reader

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/mrxs_reader/: __init__.py  __main__.py  data_reader.py  gui.py  index_parser.py  ini_parser.py  slide.py
tests/: test_basic.py
